--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   padding-top:2px;
   background: rgb(12, 12, 12);
   font-family: 'Press Start 2P', cursive;
+  color: rgb(255, 255, 255);
 }
 
 .big-title {
