--- a/style.css
+++ b/style.css
@@ -32,3 +32,15 @@ body {
   text-decoration: none;
   padding:20px;
 }
+
+.main-text {
+  display: flex;
+  justify-content: center;
+  margin:20px;
+  line-height: 50px;
+}
+
+img {
+  width:500px;
+  height:500px;
+}
