--- a/projects.css
+++ b/projects.css
@@ -15,3 +15,15 @@ body {
   text-decoration: none;
   padding:20px;
 }
+
+.navbar:hover{
+  background: rgb(67, 68, 67);
+}
+
+.navbar:active {
+  background: rgb(67, 68, 67);
+}
+
+.navbar:selected {
+  background: rgb(67, 68, 67);
+}
