--- a/favorites.css
+++ b/favorites.css
@@ -1,6 +1,7 @@
 body {
   padding-top:2px;
-  background: rgb(12, 12, 12);
+  background: rgb(0, 0, 0);
+  color: white;
   font-family: 'Press Start 2P', cursive;
 }
 
@@ -82,4 +83,29 @@ body {
   transform: translate(-50%, -50%);
   text-align: center;
 }
+.fav-titles {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin:100px;
+  margin-bottom: 10px;
+  margin-top:10px;
+  line-height: 50px;
+}
+.title-words {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin:100px;
+  margin-bottom: 10px;
+  margin-top:10px;
+  line-height: 50px;
+}
 
+div, iframe {
+    display:block;
+    width: 100px;
+    height: 50px;
+    margin: 0 auto;
+    background-color: #777;
+}
