--- a/projects.css
+++ b/projects.css
@@ -1,6 +1,7 @@
 body {
   padding-top:2px;
   background: rgb(0, 0, 0);
+  color: white;
   font-family: 'Press Start 2P', cursive;
 }
 
@@ -26,4 +27,16 @@ body {
 
 .navbar:selected {
   background: rgb(67, 68, 67);
+}
+
+.text-words {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin:100px;
+  margin-bottom: 10px;
+  margin-top:10px;
+  line-height: 50px;
+
+  
 }
