--- a/projects.css
+++ b/projects.css
@@ -37,6 +37,10 @@ body {
   margin-bottom: 10px;
   margin-top:10px;
   line-height: 50px;
+}
 
-  
+.toastgif {
+  margin-top:10px;
+  width:250px;
+  height:250px;
 }
