--- a/favorites.css
+++ b/favorites.css
@@ -110,11 +110,22 @@ body {
   margin-top:10px;
   line-height: 50px;
 }
-
+/*
 div, iframe {
     display:block;
     width: 100px;
     height: 100px;
     margin: 0 auto;
     background-color: #777;
+}
+*/
+.paragraph-words {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-size: 15px;
+  margin:100px;
+  margin-bottom: 10px;
+  margin-top:10px;
+  line-height: 35px;
 }
