--- a/style.css
+++ b/style.css
@@ -66,6 +66,17 @@ body {
   margin-top:10px;
   line-height: 50px;
 }
+
+.paragraph-words {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-size: 15px;
+  margin:100px;
+  margin-bottom: 10px;
+  margin-top:10px;
+  line-height: 35px;
+}
 .social-media {
   display: flex;
   justify-content: center;
